--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,10 +1,4 @@
-@import 'normalize.css';
-
-body {
-    color:orange;
-}
-
-a{
-    text-decoration:none;
-    color: inherit;
-}
+@import "normalize.css";
+@import "./base/_global";
+@import "./modules/_container";
+@import "./modules/_header";
