--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,11 +1,11 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  a,
-  a:active {
-    text-decoration: none;
-    color: inherit;
-  }
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
 
-
+a,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
