--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -1,11 +1,26 @@
 .hero {
-    border: 1px solid black;
-  
-    &__image-container {
-      max-width: 50%;
-    }
-  
-    &__image {
-      width: 100%;
-    }
+  background: linear-gradient(
+      0deg,
+      rgba(48, 66, 101, 0.25),
+      rgba(48, 66, 101, 0.25)
+    ),
+    url("assets/images/banner-background.png");
+
+  &__image-container {
+    max-width: 50%;
   }
+
+  &__image {
+    width: 100%;
+  }
+
+  &__text-content {
+    margin-top: 3.125rem;
+    width: 50%;
+    padding: 3.125rem;
+  }
+
+  &__container {
+    display: flex;
+  }
+}
