--- a/app/assets/styles/modules/_container.css
+++ b/app/assets/styles/modules/_container.css
@@ -1,10 +1,13 @@
 .container {
-    width: 85%;
-    margin:auto;
-    
-
-    &--padded {
-        padding: 1.25em;
+    width: 100%;
+    padding: 1rem;
+  
+    @mixin atLaptopLarge {
+      width: 90%;
+      margin: auto;
+  
+      &--padded {
+        padding: 1.25rem;
+      }
     }
-
-}
+  }
