--- a/app/assets/styles/modules/_container.css
+++ b/app/assets/styles/modules/_container.css
@@ -1,10 +1,16 @@
 .container {
+  width: 100%;
+
+  @mixin atLaptop {
     width: 85%;
-    margin:auto;
-    
+    margin: auto;
+  }
 
-    &--padded {
-        padding: 1.25em;
-    }
+  &--padded {
+    padding: 1rem;
+  }
 
+  &--p-bottom {
+    padding-bottom: 2.5rem;
+  }
 }
